--- a/auth/signup.html
+++ b/auth/signup.html
@@ -68,7 +68,8 @@
         let userObj = {
             username: username.value.trim(),
             email: email.value.trim(),
-            password: password.value.trim()
+            password: password.value.trim(),
+            blogPosts: []
         }
 
         database.push(userObj)
