--- a/auth/pages/signup.html
+++ b/auth/pages/signup.html
@@ -69,7 +69,8 @@
             username: username.value.trim(),
             email: email.value.trim(),
             password: password.value.trim(),
-            blogPosts: []
+            blogPosts: [],
+            profilePicture: null
         }
 
         database.push(userObj)
