--- a/regex.html
+++ b/regex.html
@@ -5,9 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #error {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
+    <div>
+        <!-- onblur="removeErrorText()"  -->
+        <input id="input" type="text" oninput="checkPassword()">
+        <br>
+        <small id="error"> </small>
+    </div>
+    <button onclick="submitForm()"> submit</button>
 
 </body>
 
@@ -54,13 +66,69 @@
     let num = '+2348056784321'
     console.log(naijaPhone.test(num));
 
-    //
+    //secure url
+    // 'https://www.google.com' // https://facebook.com/  https://chatgpt.com/c/6881fc1f-376c-8010-9d09-ee64bce9cdc1
+    let secureRegexUrl = /^https:[/]{2}(w{3}.){0,1}[a-zA-Z]+(.[a-zA-Z]{2,4}){1,3}\S+$/
+    let site = 'https://www.google.com'
+    let secSite = 'https://facebook.com'
+    let thirdSite = 'https://chatgpt.com/c/6881fc1f-376c-8010-9d09-ee64bce9cdc1'
+    console.log(secureRegexUrl.test(site));
+    console.log(secureRegexUrl.test(secSite));
+    console.log(secureRegexUrl.test(thirdSite));
+
+    // strongPassword
+    let password = 'AAAAAAAAAl0&'
+
+    // console.log(strongPasswordRegex.test(password));
 
 
 
+    function checkPassword() {
+        let input = document.querySelector('#input')
+        let strongPasswordRegex = /^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\W_])[\S]{8,}$/
+        let capitalLetterRegex = /[A-Z]/
+        let smallLetterRegex = /[a-z]/
+        let numberRegex = /[0-9]/
+        let symbolRegex = /[\W_]/
+        document.querySelector('#error').style.display = 'block'
+        if (strongPasswordRegex.test(input.value.trim())) {
+            document.querySelector('#error').innerHTML = 'Strong Password'
 
+            document.querySelector('#error').style.color = 'green'
+            return true
+        } else {
 
+            document.querySelector('#error').style.color = 'red'
 
+            if (!capitalLetterRegex.test(input.value.trim())) {
+                document.querySelector('#error').innerHTML = 'Make sure there is at least one capital letter'
+            } else if (!smallLetterRegex.test(input.value.trim())) {
+                document.querySelector('#error').innerHTML = 'Make sure there is a small letter'
+            } else if (!numberRegex.test(input.value.trim())) {
+                document.querySelector('#error').innerHTML = 'Make sure there is at least a number'
+            } else if (!symbolRegex.test(input.value.trim())) {
+                document.querySelector('#error').innerHTML = 'Make sure there is at least a symbol'
+            } else {
+                document.querySelector('#error').innerHTML = 'Must be at least 8 characters and 20 atmost'
+            }
+
+            return false
+        }
+
+    }
+
+    // function removeErrorText() {
+    //     document.querySelector('#error').style.display = 'none'
+    // }
+
+    function submitForm() {
+        if (!checkPassword()) {
+            alert('you cant submit at the moment , give us a strong password')
+
+        } else {
+            alert('you can submit')
+        }
+    }
 
 
 
